# lang-learn-assist

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DOCUMENTATION.md  Makefile  README.md  REFACTORING_GUIDE.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  (+1 more)
docs/: DOCUMENTATION.md  FRONTEND_TESTS.md  TESTING_PLAN.md
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: audio.rs  conversations.rs  data_export.rs  deck_import.rs  decks.rs  exercise.rs  learning.rs  llm.rs  materials.rs  mod.rs  notes.rs  phrases.rs  practice.rs  questions.rs  settings.rs  tags.rs  tts.rs
src-tauri/src/commands/data_export/: duplicates.rs  export.rs  import.rs  mod.rs
src-tauri/src/commands/learning/: answer.rs  mod.rs  selection.rs  session.rs  srs.rs  stats.rs
src-tauri/src/commands/llm/: client.rs  conversation.rs  deck_generation.rs  material.rs  mod.rs  phrase.rs  prompts.rs  translation.rs  types.rs
src-tauri/src/utils/: db.rs  error.rs  lock.rs  mod.rs  regex.rs
web/: CLAUDE.md  DESIGN.md  INFRASTRUCTURE.md  MIGRATION.md  docker-compose.yml  nginx.conf
web/backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
web/backend/migrations/: 001_initial.sql  002_seed_dev_user.sql
web/backend/src/: error.rs  lib.rs  main.rs
web/backend/src/db/: mod.rs
web/backend/src/models/: language.rs  mod.rs  phrase.rs  question.rs  tag.rs
web/backend/src/routes/: languages.rs  mod.rs  phrases.rs  questions.rs  settings.rs  tags.rs
web/backend/src/services/: ai.rs
web/backend/tests/: health_test.rs  languages_test.rs  phrases_test.rs  questions_test.rs  settings_test.rs  tags_test.rs
web/backend/tests/common/: mod.rs
(+144 files in other folders)
