[package]
name = "lang-learn-assist"
version = "0.3.0"
description = "Language Learning Assistant with LLM conversation practice"
authors = ["Marcin Baniowski"]
edition = "2021"

[lib]
name = "lang_learn_assist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-mic-recorder = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
whisper-rs = { version = "0.14", features = ["metal"] }
hound = "3.5"
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
regex = "1.12.2"
thiserror = "1.0"
once_cell = "1.19"
